# WolkConnect-C

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  _wolk_connect-_functional-_documentation_8md.html  annotated.html  classes.html  configure  configure.sh  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_1e7e0f36a4035b2130c2b986d1d6321d.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_6f667b58f7a3169a183d6d3287ad4607.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  main.c  md_examples_full_feature_set_README.html  md_examples_full_feature_set__r_e_a_d_m_e.html  menudata.js  pages.html  size_definitions.h  structwolk__boolean__feeds__t.html  structwolk__ctx.html  structwolk__numeric__feeds__t.html  structwolk__string__feeds__t.html  wolk__connector_8h.html  wolk__connector_8h_source.html  wolk_connector.c  wolk_connector.h
.github/workflows/: cmake.yml
debian/: README.md  changelog  compat  control  copyright  dirs  postrm  rules  wolkconnect-c.install  wolkconnect-c.service
dependencies/: CMakeLists.txt  download.sh  make_install.sh
doc/: WolkConnect-Functional-Documentation.md  new_stylesheet.css
doc/html/: _fig11_8png.html  _fig12_8png.html  _r_e_a_d_m_e_8md.html  _wolk_connect-_functional-_documentation_8md.html  annotated.html  dir_1e7e0f36a4035b2130c2b986d1d6321d.html  dir_27754e32c89c2d7bb79ed3485b5a3f09.html  dir_e68e8157741866f444e17edd764ebbae.html  examples_2full__feature__set_2_r_e_a_d_m_e_8md.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  main_8c.html  md_README.html  md_doc_templates_WolkConnect-Functional-Documentation.html  md_examples_full_feature_set__r_e_a_d_m_e.html  menudata.js  pages.html  structpersistence__t-members.html  structpersistence__t.html  structwolk__ctx.html  wolk__connector_8h.html  wolk__connector_8h_source.html
doc/latex/: _2home_2srdjanstankovic_2git_2_wolk_connect-_c_2sources_2wolk_connector_8h-example.tex  _fig12_8png.tex  _r_e_a_d_m_e_8md.tex  _wolk_connect-_functional-_documentation_8md.tex  dir_08d237fc27d4ecd563f71c5d52f2fecc.tex  dir_1e7e0f36a4035b2130c2b986d1d6321d.tex  dir_93cd5a475578181f06387593e9986743.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_e68e8157741866f444e17edd764ebbae.tex  examples_2full__feature__set_2_r_e_a_d_m_e_8md.tex  files.tex  index.tex  md_README.tex  md__r_e_a_d_m_e.tex  md_examples_full_feature_set_README.tex  md_examples_full_feature_set__r_e_a_d_m_e.tex  refman.tex  structwolk__ctx.tex  wolk__connector_8h.tex
doc/templates/: WolkConnect-Functional-Documentation.md
docs/html/: _2home_2srdjanstankovic_2git_2_wolk_connect-_c_2sources_2wolk_connector_8h-example.html  _r_e_a_d_m_e_8md.html  _wolk_connect-_functional-_documentation_8md.html  _wolk_connect_functional_documentation_8html.html  annotated.html  classes.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_1e7e0f36a4035b2130c2b986d1d6321d.html  dir_93cd5a475578181f06387593e9986743.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_e68e8157741866f444e17edd764ebbae.html  examples_2full__feature__set_2_r_e_a_d_m_e_8md.html  files.html  full__feature__set_2main_8c.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  md__r_e_a_d_m_e.html  md_examples_full_feature_set_README.html  md_examples_full_feature_set__r_e_a_d_m_e.html  menudata.js  pages.html  persistence_8h.html  persistence_8h_source.html  simple_2main_8c.html  structwolk__ctx-members.html  structwolk__ctx.html  wolk__connector_8h.html  wolk__connector_8h_source.html
docs/latex/: _fig11_8png.tex  _wolk_connect-_functional-_documentation_8md.tex  _wolk_connect_functional_documentation_8html.tex  annotated.tex  dir_08d237fc27d4ecd563f71c5d52f2fecc.tex  dir_1e7e0f36a4035b2130c2b986d1d6321d.tex  dir_27754e32c89c2d7bb79ed3485b5a3f09.tex  dir_93cd5a475578181f06387593e9986743.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_e68e8157741866f444e17edd764ebbae.tex  examples_2full__feature__set_2_r_e_a_d_m_e_8md.tex  files.tex  full__feature__set_2main_8c.tex  index.tex  main_8c.tex  md_README.tex  md__r_e_a_d_m_e.tex  md_doc_templates_WolkConnect-Functional-Documentation.tex  md_examples_full_feature_set__r_e_a_d_m_e.tex  persistence_8h.tex  refman.tex  simple_2main_8c.tex  structpersistence__t.tex  structwolk__ctx.tex  wolk__connector_8h.tex
examples/: CMakeLists.txt  example-manifest.json  main.c
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  enums_0.js  enums_1.js  enumvalues_0.js  files_1.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  variables_0.js  variables_1.js  variables_2.js  variables_6.js  variables_7.js  variables_8.js
sources/: CMakeLists.txt  WolkConn.c  WolkConn.h  WolkQueue.c  WolkQueue.h  actuator_command.c  actuator_command.h  actuator_status.c  actuator_status.h  circular_buffer.c  circular_buffer.h  command.c  command.h  configuration_command.c  configuration_command.h  configuration_item.c  configuration_item.h  configuration_item_command.c  configuration_item_command.h  data_transmission.c  data_transmission.h  file_management.c  file_management.h  file_management_command.c  file_management_command.h  file_management_packet.c  file_management_packet.h  file_management_packet_request.c  file_management_parameter.c  file_management_parameter.h  file_management_status.c  file_management_status.h  firmware_update.c  firmware_update.h  firmware_update_command.c  firmware_update_command.h  firmware_update_packet.c  firmware_update_packet.h  firmware_update_packet_request.c  firmware_update_packet_request.h  (+37 more)
tests/: project.yml
tools/: make_deb.sh
(+142 files in other folders)
